K1J-1994: Cleanup public modifiers