@@ -32,10 +32,10 @@ import se.inera.intyg.common.support.model.StatusKod;
 import se.inera.intyg.common.support.modules.support.api.CertificateStateHolder;
 import se.riv.clinicalprocess.healthcond.certificate.v3.IntygsStatus;
 
-public class CertificateStateHolderConverterTest {
+class CertificateStateHolderConverterTest {
 
   @Test
-  public void testToIntygsStatusTypeNull() {
+  void testToIntygsStatusTypeNull() {
     List<IntygsStatus> res = CertificateStateHolderConverter.toIntygsStatusType(null);
 
     assertNotNull(res);
@@ -43,7 +43,7 @@ public class CertificateStateHolderConverterTest {
   }
 
   @Test
-  public void testToIntygsStatusTypeEmptyList() {
+  void testToIntygsStatusTypeEmptyList() {
     List<IntygsStatus> res = CertificateStateHolderConverter.toIntygsStatusType(new ArrayList<>());
 
     assertNotNull(res);
@@ -51,7 +51,7 @@ public class CertificateStateHolderConverterTest {
   }
 
   @Test
-  public void testToIntygsStatusType() {
+  void testToIntygsStatusType() {
     final LocalDateTime timestamp1 = LocalDateTime.now();
     final LocalDateTime timestamp2 = LocalDateTime.now().minusDays(2);
     final LocalDateTime timestamp3 = LocalDateTime.now().minusDays(1);
@@ -67,7 +67,7 @@ public class CertificateStateHolderConverterTest {
 
     assertNotNull(res);
     assertEquals(5, res.size());
-    assertEquals("FKASSA", res.get(0).getPart().getCode());
+    assertEquals("FKASSA", res.getFirst().getPart().getCode());
     assertEquals(StatusKod.CANCEL.name(), res.get(0).getStatus().getCode());
     assertEquals(timestamp1, res.get(0).getTidpunkt());
     assertEquals("TRANSP", res.get(1).getPart().getCode());
@@ -85,38 +85,37 @@ public class CertificateStateHolderConverterTest {
   }
 
   @Test
-  public void testToIntygsStatusTypeInvalidStatus() {
+  void testToIntygsStatusTypeInvalidStatus() {
+    List<CertificateStateHolder> source = new ArrayList<>();
+    source.add(
+        new CertificateStateHolder("FKASSA", CertificateState.UNHANDLED, LocalDateTime.now()));
+
     assertThrows(
         IllegalArgumentException.class,
-        () -> {
-          List<CertificateStateHolder> source = new ArrayList<>();
-          source.add(
-              new CertificateStateHolder(
-                  "FKASSA", CertificateState.UNHANDLED, LocalDateTime.now()));
-          CertificateStateHolderConverter.toIntygsStatusType(source);
-        });
+        () -> CertificateStateHolderConverter.toIntygsStatusType(source));
   }
 
   @Test
-  public void testToIntygsStatusTypeSetsCodeSystemAndDisplayNameOfStatus() {
+  void testToIntygsStatusTypeSetsCodeSystemAndDisplayNameOfStatus() {
     List<CertificateStateHolder> source = new ArrayList<>();
     source.add(new CertificateStateHolder("FKASSA", CertificateState.SENT, LocalDateTime.now()));
     List<IntygsStatus> res = CertificateStateHolderConverter.toIntygsStatusType(source);
 
     assertNotNull(res);
-    assertEquals(StatusKod.SENTTO.name(), res.get(0).getStatus().getCode());
-    assertEquals("9871cd17-8755-4ed9-b894-ff3729e775a4", res.get(0).getStatus().getCodeSystem());
-    assertEquals("SENT", res.get(0).getStatus().getDisplayName());
+    assertEquals(StatusKod.SENTTO.name(), res.getFirst().getStatus().getCode());
+    assertEquals(
+        "9871cd17-8755-4ed9-b894-ff3729e775a4", res.getFirst().getStatus().getCodeSystem());
+    assertEquals("SENT", res.getFirst().getStatus().getDisplayName());
   }
 
   @Test
-  public void testToIntygsStatusTypeSetsCodeSystemAndDisplayNameOfPart() {
+  void testToIntygsStatusTypeSetsCodeSystemAndDisplayNameOfPart() {
     List<CertificateStateHolder> source = new ArrayList<>();
     source.add(new CertificateStateHolder("FKASSA", CertificateState.SENT, LocalDateTime.now()));
     List<IntygsStatus> res = CertificateStateHolderConverter.toIntygsStatusType(source);
 
     assertNotNull(res);
-    assertEquals("FKASSA", res.get(0).getPart().getCode());
-    assertEquals("769bb12b-bd9f-4203-a5cd-fd14f2eb3b80", res.get(0).getPart().getCodeSystem());
+    assertEquals("FKASSA", res.getFirst().getPart().getCode());
+    assertEquals("769bb12b-bd9f-4203-a5cd-fd14f2eb3b80", res.getFirst().getPart().getCodeSystem());
   }
 }
