@@ -34,13 +34,13 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
 import com.helger.schematron.svrl.jaxb.SchematronOutputType;
 import jakarta.xml.bind.JAXB;
 import jakarta.xml.ws.soap.SOAPFaultException;
 import java.io.StringReader;
 import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
@@ -118,7 +118,7 @@ import tools.jackson.databind.ObjectMapper;
       UnitMapperUtil.class,
       InternalConverterUtil.class
     })
-public class FkParentModuleApiTest {
+class FkParentModuleApiTest {
 
   private static final String INTYG_ID = "test-id";
   private static final String LOGICAL_ADDRESS = "logicalAddress";
@@ -144,11 +144,11 @@ public class FkParentModuleApiTest {
   @Spy private ObjectMapper objectMapper = new CustomObjectMapper();
 
   public FkParentModuleApiTest() {
-    MockitoAnnotations.initMocks(this);
+    MockitoAnnotations.openMocks(this);
   }
 
   @BeforeAll
-  public static void set() throws Exception {
+  static void set() {
     registerCertificateFile = new ClassPathResource("registerCertificate.xml");
     getCertificateFile = new ClassPathResource("getCertificate.xml");
     revokeCertificateFile = new ClassPathResource("revokeCertificate.xml");
@@ -157,7 +157,7 @@ public class FkParentModuleApiTest {
   }
 
   @BeforeEach
-  public void setup() throws Exception {
+  void setup() throws Exception {
     Field field = FkParentModuleApi.class.getDeclaredField("type");
     field.setAccessible(true);
     field.set(moduleApi, TestUtlatande.class);
@@ -167,7 +167,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testValidateDraft() throws Exception {
+  void testValidateDraft() throws Exception {
     when(internalDraftValidator.validateDraft(any(Utlatande.class)))
         .thenReturn(new ValidateDraftResponse(ValidationStatus.VALID, new ArrayList<>()));
 
@@ -179,7 +179,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateNewInternal() throws Exception {
+  void testCreateNewInternal() throws Exception {
     CreateNewDraftHolder draftCertificateHolder =
         new CreateNewDraftHolder(INTYG_ID, INTYG_TYPE_VERSION_1, new HoSPersonal(), new Patient());
     String res = moduleApi.createNewInternal(draftCertificateHolder);
@@ -189,7 +189,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateNewInternalConverterException() throws Exception {
+  void testCreateNewInternalConverterException() {
     assertThrows(
         ModuleConverterException.class,
         () -> {
@@ -202,7 +202,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateNewInternalFromTemplate() throws Exception {
+  void testCreateNewInternalFromTemplate() throws Exception {
     CreateDraftCopyHolder draftCopyHolder = new CreateDraftCopyHolder(INTYG_ID, new HoSPersonal());
     String res = moduleApi.createNewInternalFromTemplate(draftCopyHolder, utlatande);
 
@@ -211,7 +211,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateNewInternalFromTemplateConverterException() throws Exception {
+  void testCreateNewInternalFromTemplateConverterException() {
     assertThrows(
         ModuleConverterException.class,
         () -> {
@@ -224,7 +224,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateRenewalFromTemplate() throws Exception {
+  void testCreateRenewalFromTemplate() throws Exception {
     CreateDraftCopyHolder draftCopyHolder = new CreateDraftCopyHolder(INTYG_ID, new HoSPersonal());
     String res = moduleApi.createRenewalFromTemplate(draftCopyHolder, utlatande);
 
@@ -233,7 +233,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateRenewalFromTemplateConverterException() throws Exception {
+  void testCreateRenewalFromTemplateConverterException() {
     assertThrows(
         ModuleConverterException.class,
         () -> {
@@ -246,11 +246,12 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testSendCertificateToRecipientResponseError() throws Exception {
+  void testSendCertificateToRecipientResponseError() {
     assertThrows(
         ExternalServiceCallException.class,
         () -> {
-          String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+          String xmlBody =
+              Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
 
           RegisterCertificateResponseType response = new RegisterCertificateResponseType();
           response.setResult(ResultTypeUtil.errorResult(ErrorIdType.TECHNICAL_ERROR, "error"));
@@ -262,11 +263,12 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testSendCertificateToRecipientSoapFault() throws Exception {
+  void testSendCertificateToRecipientSoapFault() {
     assertThrows(
         ExternalServiceCallException.class,
         () -> {
-          String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+          String xmlBody =
+              Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
 
           when(registerCertificateResponderInterface.registerCertificate(
                   eq(LOGICAL_ADDRESS), any(RegisterCertificateType.class)))
@@ -276,8 +278,8 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testSendCertificateToRecipientResponseResultMissing() throws Exception {
-    String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+  void testSendCertificateToRecipientResponseResultMissing() throws Exception {
+    String xmlBody = Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
 
     when(registerCertificateResponderInterface.registerCertificate(
             eq(LOGICAL_ADDRESS), any(RegisterCertificateType.class)))
@@ -288,8 +290,8 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testSendCertificateToRecipient() throws Exception {
-    String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+  void testSendCertificateToRecipient() throws Exception {
+    String xmlBody = Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
 
     RegisterCertificateResponseType response = new RegisterCertificateResponseType();
     response.setResult(ResultTypeUtil.okResult());
@@ -302,25 +304,21 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testSendCertificateToRecipientXmlBodyMissing() throws Exception {
+  void testSendCertificateToRecipientXmlBodyMissing() {
     assertThrows(
         ModuleException.class,
-        () -> {
-          moduleApi.sendCertificateToRecipient(null, LOGICAL_ADDRESS, "recipientId");
-        });
+        () -> moduleApi.sendCertificateToRecipient(null, LOGICAL_ADDRESS, "recipientId"));
   }
 
   @Test
-  public void testSendCertificateToRecipientLogicalAddressMissing() throws Exception {
+  void testSendCertificateToRecipientLogicalAddressMissing() {
     assertThrows(
         ModuleException.class,
-        () -> {
-          moduleApi.sendCertificateToRecipient("xml", "", "recipientId");
-        });
+        () -> moduleApi.sendCertificateToRecipient("xml", "", "recipientId"));
   }
 
   @Test
-  public void testGetCertificate() throws Exception {
+  void testGetCertificate() throws Exception {
     GetCertificateResponseType getCertificateResponse =
         JAXB.unmarshal(getCertificateFile.getFile(), GetCertificateResponseType.class);
     when(getCertificateResponderInterface.getCertificate(
@@ -343,7 +341,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetCertificateRevoked() throws Exception {
+  void testGetCertificateRevoked() throws Exception {
     GetCertificateResponseType getCertificateResponse =
         JAXB.unmarshal(getCertificateFile.getFile(), GetCertificateResponseType.class);
     IntygsStatus revokedStatus = new IntygsStatus();
@@ -368,7 +366,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetCertificateConvertException() throws Exception {
+  void testGetCertificateConvertException() {
     assertThrows(
         ModuleException.class,
         () -> {
@@ -384,7 +382,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetCertificateSoapFault() throws Exception {
+  void testGetCertificateSoapFault() {
     assertThrows(
         ModuleException.class,
         () -> {
@@ -397,7 +395,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRegisterCertificate() throws Exception {
+  void testRegisterCertificate() throws Exception {
     RegisterCertificateType registerCertificateType =
         JAXB.unmarshal(registerCertificateFile.getFile(), RegisterCertificateType.class);
     doReturn(registerCertificateType).when(moduleApi).internalToTransport(any(Utlatande.class));
@@ -411,7 +409,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRegisterCertificateConverterException() throws Exception {
+  void testRegisterCertificateConverterException() {
     assertThrows(
         ModuleConverterException.class,
         () -> {
@@ -424,7 +422,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRegisterCertificateResponseError() throws Exception {
+  void testRegisterCertificateResponseError() throws Exception {
     RegisterCertificateType registerCertificateType =
         JAXB.unmarshal(registerCertificateFile.getFile(), RegisterCertificateType.class);
     doReturn(registerCertificateType).when(moduleApi).internalToTransport(any(Utlatande.class));
@@ -443,7 +441,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRegisterCertificateAlreadyExists() throws Exception {
+  void testRegisterCertificateAlreadyExists() throws Exception {
     RegisterCertificateType registerCertificateType =
         JAXB.unmarshal(registerCertificateFile.getFile(), RegisterCertificateType.class);
     doReturn(registerCertificateType).when(moduleApi).internalToTransport(any(Utlatande.class));
@@ -462,7 +460,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRegisterCertificateOtherInfoResult() throws Exception {
+  void testRegisterCertificateOtherInfoResult() throws Exception {
     RegisterCertificateType registerCertificateType =
         JAXB.unmarshal(registerCertificateFile.getFile(), RegisterCertificateType.class);
     doReturn(registerCertificateType).when(moduleApi).internalToTransport(any(Utlatande.class));
@@ -481,9 +479,9 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testUpdateBeforeSave() throws Exception {
+  void testUpdateBeforeSave() throws Exception {
     final String otherHosPersonalName = "Other Person";
-    doAnswer(invocation -> (Utlatande) invocation.getArguments()[0])
+    doAnswer(invocation -> invocation.getArguments()[0])
         .when(moduleApi)
         .decorateDiagnoserWithDescriptions(any(Utlatande.class));
 
@@ -499,16 +497,14 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testUpdateBeforeSaveInvalidJson() throws Exception {
+  void testUpdateBeforeSaveInvalidJson() {
     assertThrows(
         ModuleException.class,
-        () -> {
-          moduleApi.updateBeforeSave("invalidJson", new HoSPersonal(), LocalDateTime.now());
-        });
+        () -> moduleApi.updateBeforeSave("invalidJson", new HoSPersonal(), LocalDateTime.now()));
   }
 
   @Test
-  public void testUpdatePatientBeforeSave() throws Exception {
+  void testUpdatePatientBeforeSave() throws Exception {
     Patient updatedPatient = createUpdatedPatient();
     String res = moduleApi.updateBeforeSave(json, updatedPatient, LocalDateTime.now());
     assertNotNull(res);
@@ -516,10 +512,10 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testUpdateBeforeSigning() throws Exception {
+  void testUpdateBeforeSigning() throws Exception {
     final String otherHosPersonalName = "Other Person";
     final LocalDateTime signDate = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
-    doAnswer(invocation -> (Utlatande) invocation.getArguments()[0])
+    doAnswer(invocation -> invocation.getArguments()[0])
         .when(moduleApi)
         .decorateDiagnoserWithDescriptions(any(Utlatande.class));
 
@@ -535,16 +531,14 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testUpdateBeforeSigningInvalidJson() throws Exception {
+  void testUpdateBeforeSigningInvalidJson() {
     assertThrows(
         ModuleException.class,
-        () -> {
-          moduleApi.updateBeforeSigning("invalidJson", new HoSPersonal(), LocalDateTime.now());
-        });
+        () -> moduleApi.updateBeforeSigning("invalidJson", new HoSPersonal(), LocalDateTime.now()));
   }
 
   @Test
-  public void testUpdatePatientBeforeViewing() throws Exception {
+  void testUpdatePatientBeforeViewing() throws Exception {
     Patient updatedPatient = createUpdatedPatient();
     String res = moduleApi.updateBeforeViewing(json, updatedPatient, LocalDateTime.now());
     assertNotNull(res);
@@ -552,7 +546,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetUtlatandeFromJson() throws Exception {
+  void testGetUtlatandeFromJson() throws Exception {
     Utlatande res = moduleApi.getUtlatandeFromJson(json);
     assertNotNull(res);
     assertEquals(INTYG_ID, res.getId());
@@ -560,17 +554,13 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetUtlatandeFromJsonInvalidJson() throws Exception {
-    assertThrows(
-        ModuleSystemException.class,
-        () -> {
-          moduleApi.getUtlatandeFromJson("invalidJson");
-        });
+  void testGetUtlatandeFromJsonInvalidJson() {
+    assertThrows(ModuleSystemException.class, () -> moduleApi.getUtlatandeFromJson("invalidJson"));
   }
 
   @Test
-  public void testGetUtlatandeFromXml() throws Exception {
-    String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+  void testGetUtlatandeFromXml() throws Exception {
+    String xmlBody = Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
     doReturn(utlatande).when(moduleApi).transportToInternal(any(Intyg.class));
     Utlatande res = moduleApi.getUtlatandeFromXml(xmlBody);
     assertNotNull(res);
@@ -578,18 +568,19 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetUtlatandeFromXmlConverterException() throws Exception {
+  void testGetUtlatandeFromXmlConverterException() {
     assertThrows(
         ModuleException.class,
         () -> {
-          String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+          String xmlBody =
+              Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
           doThrow(new ConverterException()).when(moduleApi).transportToInternal(any(Intyg.class));
           moduleApi.getUtlatandeFromXml(xmlBody);
         });
   }
 
   @Test
-  public void testGetIntygFromUtlatande() throws Exception {
+  void testGetIntygFromUtlatande() throws Exception {
     Intyg intyg =
         JAXB.unmarshal(registerCertificateFile.getFile(), RegisterCertificateType.class).getIntyg();
     doReturn(intyg).when(moduleApi).utlatandeToIntyg(any(Utlatande.class));
@@ -599,7 +590,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetIntygFromUtlatandeConverterException() throws Exception {
+  void testGetIntygFromUtlatandeConverterException() {
     assertThrows(
         ModuleException.class,
         () -> {
@@ -609,15 +600,15 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testTransformToStatisticsService() throws Exception {
+  void testTransformToStatisticsService() throws Exception {
     final String inputString = "input string";
     String res = moduleApi.transformToStatisticsService(inputString);
     assertEquals(inputString, res);
   }
 
   @Test
-  public void testvalidateXml() throws Exception {
-    String xmlBody = Resources.toString(registerCertificateFile.getURL(), Charsets.UTF_8);
+  void testvalidateXml() throws Exception {
+    String xmlBody = Resources.toString(registerCertificateFile.getURL(), StandardCharsets.UTF_8);
     when(validator.validateSchematron(any(Source.class))).thenReturn(new SchematronOutputType());
     ValidateXmlResponse res = moduleApi.validateXml(xmlBody);
     assertNotNull(res);
@@ -625,7 +616,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testGetModuleSpecificArendeParameters() throws Exception {
+  void testGetModuleSpecificArendeParameters() {
     final String svarIdHelperAnswer1 = "svarIdHelperAnswer1";
     final String svarIdHelperAnswer2 = "svarIdHelperAnswer2";
     List<String> frageIds = Arrays.asList("1", "2", "9001");
@@ -634,20 +625,20 @@ public class FkParentModuleApiTest {
 
     Map<String, List<String>> res =
         moduleApi.getModuleSpecificArendeParameters(new TestUtlatande(), frageIds);
-    assertEquals(3, res.keySet().size());
+    assertEquals(3, res.size());
     assertEquals(2, res.get("1").size());
     assertEquals(svarIdHelperAnswer1, res.get("1").get(0));
     assertEquals(svarIdHelperAnswer2, res.get("1").get(1));
     assertEquals(1, res.get("2").size());
-    assertEquals("kannedomOmPatient", res.get("2").get(0));
+    assertEquals("kannedomOmPatient", res.get("2").getFirst());
     assertEquals(1, res.get("9001").size());
-    assertEquals("tillaggsfragor", res.get("9001").get(0));
+    assertEquals("tillaggsfragor", res.get("9001").getFirst());
     verify(svarIdHelper).calculateFrageIdHandleForGrundForMU(any(Utlatande.class));
   }
 
   @Test
-  public void testRevokeCertificate() throws Exception {
-    String xmlBody = Resources.toString(revokeCertificateFile.getURL(), Charsets.UTF_8);
+  void testRevokeCertificate() throws Exception {
+    String xmlBody = Resources.toString(revokeCertificateFile.getURL(), StandardCharsets.UTF_8);
     RevokeCertificateResponseType revokeResponse = new RevokeCertificateResponseType();
     revokeResponse.setResult(ResultTypeUtil.okResult());
     when(revokeCertificateClient.revokeCertificate(
@@ -664,11 +655,12 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testRevokeCertificateResponseError() throws Exception {
+  void testRevokeCertificateResponseError() {
     assertThrows(
         ExternalServiceCallException.class,
         () -> {
-          String xmlBody = Resources.toString(revokeCertificateFile.getURL(), Charsets.UTF_8);
+          String xmlBody =
+              Resources.toString(revokeCertificateFile.getURL(), StandardCharsets.UTF_8);
           RevokeCertificateResponseType revokeResponse = new RevokeCertificateResponseType();
           revokeResponse.setResult(
               ResultTypeUtil.errorResult(ErrorIdType.APPLICATION_ERROR, "error"));
@@ -681,7 +673,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testCreateRevokeRequest() throws Exception {
+  void testCreateRevokeRequest() throws Exception {
     final String meddelande = "meddelande";
 
     String res =
@@ -695,7 +687,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testHandleResponseInfo() throws Exception {
+  void testHandleResponseInfo() throws Exception {
     RegisterCertificateResponseType response =
         createRegisterCertificateResponse(ResultCodeType.INFO);
     RegisterCertificateType request = new RegisterCertificateType();
@@ -704,7 +696,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void testHandleResponseError() throws Exception {
+  void testHandleResponseError() {
     assertThrows(
         ExternalServiceCallException.class,
         () -> {
@@ -717,7 +709,7 @@ public class FkParentModuleApiTest {
   }
 
   @Test
-  public void shouldReturnPreambleForCitizens() {
+  void shouldReturnPreambleForCitizens() {
     final var expectedResult =
         CertificateText.builder()
             .type(CertificateTextType.PREAMBLE_TEXT)
@@ -738,13 +730,13 @@ public class FkParentModuleApiTest {
     return response;
   }
 
-  private Patient createUpdatedPatient() throws Exception {
+  private Patient createUpdatedPatient() {
     Patient patient = new Patient();
     patient.setEfternamn("updated lastName");
     patient.setMellannamn("updated middle-name");
     patient.setFornamn("updated firstName");
     patient.setFullstandigtNamn("updated full name");
-    patient.setPersonId(Personnummer.createPersonnummer("19121212-1212").get());
+    patient.setPersonId(Personnummer.createPersonnummer("19121212-1212").orElseThrow());
     patient.setPostadress("updated postal address");
     patient.setPostnummer("54321");
     patient.setPostort("updated post city");
@@ -752,7 +744,7 @@ public class FkParentModuleApiTest {
     return patient;
   }
 
-  public static class TestUtlatande implements Utlatande {
+  static class TestUtlatande implements Utlatande {
 
     private String typ;
 
