@@ -25,17 +25,16 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
+import com.helger.schematron.svrl.AbstractSVRLMessage;
 import com.helger.schematron.svrl.SVRLHelper;
 import com.helger.schematron.svrl.jaxb.SchematronOutputType;
 import jakarta.xml.bind.JAXB;
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.URL;
-import java.util.stream.Collectors;
+import java.nio.charset.StandardCharsets;
 import javax.xml.transform.stream.StreamSource;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -66,7 +65,7 @@ import tools.jackson.databind.ObjectMapper;
 
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {BefattningService.class})
-public class ConverterTest {
+class ConverterTest {
 
   @Spy private ValidatorUtilFK validatorUtil = new ValidatorUtilFK();
 
@@ -74,20 +73,20 @@ public class ConverterTest {
 
   @Mock private WebcertModuleService webcertModuleService;
 
-  private ObjectMapper objectMapper = new CustomObjectMapper();
+  private final ObjectMapper objectMapper = new CustomObjectMapper();
 
   public ConverterTest() {
-    MockitoAnnotations.initMocks(this);
+    MockitoAnnotations.openMocks(this);
   }
 
   @BeforeEach
-  public void setup() {
+  void setup() {
     when(webcertModuleService.validateDiagnosisCode(anyString(), anyString())).thenReturn(true);
     when(webcertModuleService.validateDiagnosisCodeFormat(anyString())).thenReturn(true);
   }
 
   @BeforeAll
-  public static void setUp() {
+  static void setUp() {
     final var mapper = mock(UnitMapperUtil.class);
 
     when(mapper.getMappedUnit(any(), any(), any(), any(), any()))
@@ -104,8 +103,8 @@ public class ConverterTest {
   }
 
   @Test
-  public void doSchematronValidationLuaeNa() throws Exception {
-    String xmlContents = Resources.toString(getResource("v1/luae_na.xml"), Charsets.UTF_8);
+  void doSchematronValidationLuaeNa() throws Exception {
+    String xmlContents = Resources.toString(getResource("v1/luae_na.xml"), StandardCharsets.UTF_8);
 
     RegisterCertificateTestValidator generalValidator = new RegisterCertificateTestValidator();
     assertTrue(generalValidator.validateGeneral(xmlContents));
@@ -114,15 +113,16 @@ public class ConverterTest {
         new RegisterCertificateValidator(LuaenaModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(xmlContents.getBytes(Charsets.UTF_8))));
+            new StreamSource(
+                new ByteArrayInputStream(xmlContents.getBytes(StandardCharsets.UTF_8))));
 
     assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size());
   }
 
   @Test
-  public void outputJsonFromXml() throws Exception {
+  void outputJsonFromXml() throws Exception {
 
-    String xmlContents = Resources.toString(getResource("v1/luae_na.xml"), Charsets.UTF_8);
+    String xmlContents = Resources.toString(getResource("v1/luae_na.xml"), StandardCharsets.UTF_8);
     RegisterCertificateType transport =
         JAXB.unmarshal(new StringReader(xmlContents), RegisterCertificateType.class);
 
@@ -138,7 +138,8 @@ public class ConverterTest {
         new RegisterCertificateValidator(LuaenaModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(convertedXML.getBytes(Charsets.UTF_8))));
+            new StreamSource(
+                new ByteArrayInputStream(convertedXML.getBytes(StandardCharsets.UTF_8))));
 
     assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size(), getErrorString(result));
 
@@ -149,9 +150,9 @@ public class ConverterTest {
   private String getErrorString(SchematronOutputType result) {
     StringBuilder errorMsg = new StringBuilder();
     SVRLHelper.getAllFailedAssertions(result).stream()
-        .map(e -> e.getText())
-        .collect(Collectors.toList())
-        .forEach(e -> errorMsg.append(e));
+        .map(AbstractSVRLMessage::getText)
+        .toList()
+        .forEach(errorMsg::append);
     return errorMsg.toString();
   }
 
@@ -159,7 +160,7 @@ public class ConverterTest {
     return Thread.currentThread().getContextClassLoader().getResource(href);
   }
 
-  private String getXmlFromModel(RegisterCertificateType transport) throws IOException {
+  private String getXmlFromModel(RegisterCertificateType transport) {
     StringWriter sw = new StringWriter();
     JAXB.marshal(transport, sw);
     return sw.toString();
