@@ -58,7 +58,7 @@ import static se.inera.intyg.common.ts_diabetes.v3.validator.InternalDraftValida
 import com.google.common.collect.ImmutableSet;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
+import java.util.Objects;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -71,16 +71,17 @@ import se.inera.intyg.common.ts_diabetes.v3.model.internal.TsDiabetesUtlatandeV3
 import se.inera.intyg.common.ts_diabetes.v3.utils.ScenarioFinder;
 
 @ExtendWith(MockitoExtension.class)
-public class InternalDraftValidatorTest {
+class InternalDraftValidatorTest {
 
   @InjectMocks InternalDraftValidatorImpl validator;
 
-  private static InternalValidatorHelper internalValidatorHelper = new InternalValidatorHelper();
+  private static final InternalValidatorHelper internalValidatorHelper =
+      new InternalValidatorHelper();
 
   public static TsDiabetesUtlatandeV3 setupPassingHypoglykemierDates(
       TsDiabetesUtlatandeV3 utlatande) {
     internalValidatorHelper.setNowMinusDays(
-        utlatande.getHypoglykemier().getAterkommandeSenasteTidpunkt(), 10);
+        Objects.requireNonNull(utlatande.getHypoglykemier()).getAterkommandeSenasteTidpunkt(), 10);
     internalValidatorHelper.setNowMinusDays(
         utlatande.getHypoglykemier().getForekomstTrafikTidpunkt(), 10);
     internalValidatorHelper.setNowMinusDays(
@@ -89,7 +90,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void validateMinimalValidUtkast() throws Exception {
+  void validateMinimalValidUtkast() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("pass-minimal").asInternalModel();
 
@@ -100,7 +101,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void validateCompleteValidUtkast() throws Exception {
+  void validateCompleteValidUtkast() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("pass-complete").asInternalModel());
@@ -112,7 +113,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule1() throws Exception {
+  void failureDueToRule1() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R1").asInternalModel();
 
@@ -121,7 +122,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_BEDOMNING, error.getCategory());
     assertEquals(
         BEDOMNING_JSON_ID + "." + BEDOMNING_LAMPLIGHET_ATT_INNEHA_JSON_ID, error.getField());
@@ -129,7 +130,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule2() throws Exception {
+  void failureDueToRule2() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R2").asInternalModel();
 
@@ -138,14 +139,14 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(ALLMANT_JSON_ID + "." + ALLMANT_DIABETES_DIAGNOS_AR_JSON_ID_11, error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
   }
 
   @Test
-  public void failureDueToRule3() throws Exception {
+  void failureDueToRule3() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R3").asInternalModel();
 
@@ -154,7 +155,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(
         ALLMANT_JSON_ID + "." + ALLMANT_BESKRIVNING_ANNAN_TYP_AV_DIABETES_JSON_ID,
@@ -163,7 +164,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule4() throws Exception {
+  void failureDueToRule4() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R4").asInternalModel();
 
@@ -172,14 +173,14 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(ALLMANT_JSON_ID + "." + ALLMANT_BEHANDLING_JSON_ID, error.getField());
     assertEquals(ValidationMessageType.EMPTY, error.getType());
   }
 
   @Test
-  public void failureDueToRule5() throws Exception {
+  void failureDueToRule5() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("fail-R5").asInternalModel());
@@ -189,7 +190,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(
         ALLMANT_JSON_ID
@@ -202,7 +203,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule6() throws Exception {
+  void failureDueToRule6() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R6").asInternalModel();
 
@@ -225,7 +226,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule7() throws Exception {
+  void failureDueToRule7() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("fail-R7a").asInternalModel());
@@ -235,7 +236,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(
         ALLMANT_JSON_ID
@@ -255,7 +256,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    error = res.getValidationErrors().get(0);
+    error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(
         ALLMANT_JSON_ID
@@ -268,7 +269,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule8() throws Exception {
+  void failureDueToRule8() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("fail-R8").asInternalModel());
@@ -278,7 +279,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_ARET_TIDPUNKT_JSON_ID,
@@ -287,24 +288,26 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule9() throws Exception {
+  void failureDueToRule9() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R9").asInternalModel();
     // Test json can't have dynamic dates som we override it here.
     // Maybe we should allow getInternalScenario to have arguments that replaces tfeilds in the json
     // file when reading?
-    final String lastMonth =
-        LocalDate.now().minus(1, ChronoUnit.MONTHS).format(DateTimeFormatter.ISO_DATE);
+    final String lastMonth = LocalDate.now().minusMonths(1).format(DateTimeFormatter.ISO_DATE);
 
-    utlatande.getHypoglykemier().getAterkommandeSenasteTidpunkt().setDate(lastMonth);
-    utlatande.getHypoglykemier().getForekomstTrafikTidpunkt().setDate(lastMonth);
+    Objects.requireNonNull(
+            Objects.requireNonNull(utlatande.getHypoglykemier()).getAterkommandeSenasteTidpunkt())
+        .setDate(lastMonth);
+    Objects.requireNonNull(utlatande.getHypoglykemier().getForekomstTrafikTidpunkt())
+        .setDate(lastMonth);
 
     ValidateDraftResponse res = validator.validateDraft(utlatande);
 
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_TIDPUNKT_VAKEN_JSON_ID,
@@ -313,7 +316,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule10() throws Exception {
+  void failureDueToRule10() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("fail-R10").asInternalModel());
@@ -323,7 +326,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_FOREKOMST_TRAFIK_TIDPUNKT_JSON_ID,
@@ -332,7 +335,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule12() throws Exception {
+  void failureDueToRule12() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R12").asInternalModel();
 
@@ -371,7 +374,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule13() throws Exception {
+  void failureDueToRule13() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R13").asInternalModel();
 
@@ -410,7 +413,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule14() throws Exception {
+  void failureDueToRule14() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R14").asInternalModel();
 
@@ -449,7 +452,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule15() throws Exception {
+  void failureDueToRule15() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R15").asInternalModel();
 
@@ -488,7 +491,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule16() throws Exception {
+  void failureDueToRule16() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R16").asInternalModel();
 
@@ -497,7 +500,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     ImmutableSet<ValidationMessage> expectedErrors =
         ImmutableSet.of(
@@ -509,7 +512,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule17() throws Exception {
+  void failureDueToRule17() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R17").asInternalModel();
 
@@ -518,7 +521,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(2, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     ImmutableSet<ValidationMessage> expectedErrors =
         ImmutableSet.of(
@@ -534,7 +537,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule18() throws Exception {
+  void failureDueToRule18() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R18").asInternalModel();
 
@@ -543,7 +546,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_ALLMANT, error.getCategory());
     assertEquals(
         ALLMANT_JSON_ID
@@ -556,7 +559,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule19() throws Exception {
+  void failureDueToRule19() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         setupPassingHypoglykemierDates(
             ScenarioFinder.getInternalScenario("fail-R19").asInternalModel());
@@ -616,7 +619,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule20() throws Exception {
+  void failureDueToRule20() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R20a").asInternalModel();
 
@@ -625,13 +628,13 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_ARET_TIDPUNKT_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-11");
+    assertEquals("common.validation.d-11", error.getMessage());
 
     utlatande = ScenarioFinder.getInternalScenario("fail-R20b").asInternalModel();
 
@@ -640,17 +643,17 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    error = res.getValidationErrors().get(0);
+    error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_ARET_TIDPUNKT_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-08");
+    assertEquals("common.validation.d-08", error.getMessage());
   }
 
   @Test
-  public void failureDueToRules21() throws Exception {
+  void failureDueToRules21() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R21a").asInternalModel();
 
@@ -659,13 +662,13 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_TIDPUNKT_VAKEN_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-11");
+    assertEquals("common.validation.d-11", error.getMessage());
 
     utlatande = ScenarioFinder.getInternalScenario("fail-R21b").asInternalModel();
 
@@ -674,17 +677,17 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    error = res.getValidationErrors().get(0);
+    error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_ATERKOMMANDE_SENASTE_TIDPUNKT_VAKEN_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-08");
+    assertEquals("common.validation.d-08", error.getMessage());
   }
 
   @Test
-  public void failureDueToRules22() throws Exception {
+  void failureDueToRules22() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R22a").asInternalModel();
 
@@ -693,13 +696,13 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_FOREKOMST_TRAFIK_TIDPUNKT_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-11");
+    assertEquals("common.validation.d-11", error.getMessage());
 
     utlatande = ScenarioFinder.getInternalScenario("fail-R22b").asInternalModel();
 
@@ -708,17 +711,17 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    error = res.getValidationErrors().get(0);
+    error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_HYPOGLYKEMIER, error.getCategory());
     assertEquals(
         HYPOGLYKEMIER_JSON_ID + "." + HYPOGLYKEMIER_FOREKOMST_TRAFIK_TIDPUNKT_JSON_ID,
         error.getField());
     assertEquals(ValidationMessageType.OTHER, error.getType());
-    assertEquals(error.getMessage(), "common.validation.d-08");
+    assertEquals("common.validation.d-08", error.getMessage());
   }
 
   @Test
-  public void failureDueToRules23_24() throws Exception {
+  void failureDueToRules23_24() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R23").asInternalModel();
 
@@ -727,7 +730,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_BEDOMNING, error.getCategory());
     assertEquals(
         BEDOMNING_JSON_ID + "." + BEDOMNING_UPPFYLLER_BEHORIGHETSKRAV_JSON_ID, error.getField());
@@ -735,7 +738,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules25() throws Exception {
+  void failureDueToRules25() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R25").asInternalModel();
 
@@ -775,7 +778,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules26() throws Exception {
+  void failureDueToRules26() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-R26").asInternalModel();
 
@@ -784,7 +787,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals(CATEGORY_SYNFUNKTION, error.getCategory());
     assertEquals(
         SYNFUNKTION_JSON_ID + "." + SYNFUNKTION_SYNSKARPA_SKICKAS_SEPARAT_JSON_ID,
@@ -793,7 +796,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToMissingVardenhetPostnummer() throws Exception {
+  void failureDueToMissingVardenhetPostnummer() throws Exception {
     TsDiabetesUtlatandeV3 utlatande =
         ScenarioFinder.getInternalScenario("fail-vardenhetensPostNummerSaknas").asInternalModel();
     ValidateDraftResponse res = validator.validateDraft(utlatande);
@@ -801,7 +804,7 @@ public class InternalDraftValidatorTest {
     assertTrue(res.hasErrorMessages());
     assertFalse(res.hasWarningMessages());
     assertEquals(1, res.getValidationErrors().size());
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertEquals("vardenhet", error.getCategory());
     assertEquals("grunddata.skapadAv.vardenhet.postnummer", error.getField());
     assertEquals(ValidationMessageType.EMPTY, error.getType());
